Added 03. la base

--- a/03.md
+++ b/03.md
@@ -2,5 +2,104 @@
 
 ## 03. La base
 
+J'adore les Lego et ça depuis aussi loin dont je me souvienne. Un de mes plus anciens souvenirs c'est justement moi, à Noël, chez mes oncle et tante, entrain de monter des Lego .
+
+Arlésienne c'est un peu cela à mes yeux, et même n'importe quel projet informatique. Un ensemble de brique à assembler en suivant un ordre pour créer le produit final. 
+
+Et la première de ces briques, au risque de me répéter, c'est la base de données. 
+
+Dans un projet classique, je ferais des dessins préparatoires de la base, des schémas normés pour pouvoir ensuite implémenter ma base sereinement .
+
+Ces étapes, je les ai déjà réalisées deux fois pour les précédentes versions d'Arlésienne. Je vais donc tricher et implémenter directement ma base. 
+
+Pour ce faire je vais avoir besoin de deux outils : le serveur de base de données [MariaDB](https://mariadb.org) et le framework [PHP](https://www.php.net) [Laravel](https://laravel.com). 
+
+Pourquoi [MariaDB](https://mariadb.org) ?
+
+[MariaDB](https://mariadb.org) est un logiciel dérivé de [MySQL](https://www.mysql.com). C'est un serveur de base de données que j'ai appris à utiliser au cours de ma formation et c'est un serveur les plus utilisé au monde pour des applications web.
+
+Il as l'avantage d'être open-source, gratuit et d'avoir une communauté gigantesque ce qui facilite grandement l'accès à des tutorials et à une assistance technique si besoin. 
+
+Et il as également l'avantage de parfaitement s'intégrer avec mon autre outil : [Laravel](https://laravel.com).
+
+Contrairement à [MariaDB](https://mariadb.org), je n'ai eu aucune formation scolaire sur [Laravel](https://laravel.com). Tout ce que j'ai appris me vient de cours avec des développeurs formés sur [Laravel](https://laravel.com) et d'auto-formation. 
+
+[Laravel](https://laravel.com) est une boîte à outils (anglais: framework) destinée aux développeurs PHP. [Laravel](https://laravel.com) propose une rationalisation du développement web permettant non seulement de gagner du temps de développement, mais également en sécurité et en robustesse. 
+
+Parmi les outils de [Laravel](https://laravel.com), celui dont je vais me servir pour la base de données est appelé : [Migration](https://laravel.com/docs/8.x/migrations). 
+
+Les migrations ne sont pas un concept exclusif à [Laravel](https://laravel.com). Il s'agit en effet de fichier de code permettant d'interagir avec la base en "migrant" d'un état à l'autre.
+
+L'avantage des migrations c'est qu'elles sont compatible avec n'importe quel serveur de base de données. Je pourrais choisir de passer de [MariaDB](https://mariadb.org) à [PostgreSQL](https://www.postgresql.org) sans avoir besoin de changer quoique ce soit à mes migrations. Sur le papier en tous cas.
+
+Rentrons maintenant dans le vif du sujet, voici à quoi ressemble un fichier de migration de [Laravel](https://laravel.com) :
+
+```php
+<?php
+
+use Illuminate\Database\Migrations\Migration;
+use Illuminate\Database\Schema\Blueprint;
+use Illuminate\Support\Facades\Schema;
+
+class CreateUsersTable extends Migration
+{
+    /**
+     * Run the migrations.
+     *
+     * @return void
+     */
+    public function up()
+    {
+        Schema::create('users', function (Blueprint $table) {
+            $table->id();
+            $table->string('first_name', 40)->nullable();
+            $table->string('last_name', 40)->nullable();
+            $table->string('pronouns')->nullable();
+            $table->string('name');
+            $table->string('email')->unique();
+            $table->timestamp('email_verified_at')->nullable();
+            $table->string('password');
+            $table->rememberToken();
+            $table->timestamps();
+        });
+    }
+
+    /**
+     * Reverse the migrations.
+     *
+     * @return void
+     */
+    public function down()
+    {
+        Schema::dropIfExists('users');
+    }
+}
+```
+
+En l'occurrence, il s'agit de la migration qui va créer la table "Users" dans ma base données. 
+
+Chaque ligne commençant par 
+```php
+$table->
+ ``` 
+Indique la création d'un champs, le nom et le type de celui avec si nécessaire des contraintes supplémentaires. 
+
+Ainsi la ligne 
+```php
+$table->string('email')->unique();
+```
+Indique à la base de créer un champs "Email" de type "Chaîne de caractère" (anglais: string) et que la valeur de ce champs doit être unique (impossible d'avoir deux fois la même adresse mail). 
+
+Ensuite à l'aide d'une commande de l'outil "artisan" de [Laravel](https://laravel.com), il est possible d'executer l'ensemble des migrations. 
+
+Et voici le résultat final :
+![Schéma des tables d'Arlésienne](https://cdn.projetretro.io/pics/03/3.png)
+
+Et les migrations ayant permis de réaliser cela sont disponibles ici : [https://github.com/projetretro/arlesienne/tree/main/database/migrations](https://github.com/projetretro/arlesienne/tree/main/database/migrations)
+
+Ce qui me permet également de vous partager le dépôt [Github](https://github.com/) sur lequel est disponible le code source d'Arlésienne : [https://github.com/projetretro/arlesienne](https://github.com/projetretro/arlesienne)
 
 
+Bien maintenant la base de données est là, il faut pouvoir la remplir et la consulter et pour ce faire il va nous falloir une `interface`. 
+
+Ce sera donc la prochaine et l'une des plus longues étapes : la conception de l'interface graphique !
